--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,13 +1,22 @@
 
 
 .navbar{
+    
+
     padding: 20px 0px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
-    rgba(220, 8, 8, 0.3) 0px 30px 60px -30px;
-    height: 5rem;
+    
+    height: 4rem;
+    width: 93%;
+    margin: auto;
+    background-color: rgb(0, 0, 0)(226, 192, 192);
+    
+   
+  
+   
+
 
     
 }
