--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,18 @@
 }
 body{
   min-height: 100vh;
+  padding: 15px 0px;  
+}
+app{
+  width: 80%;
+  margin: auto;
 }
 a{
   text-decoration: none;
   color: inherit;
+}
+@keyframes fadeIn {
+  0% { opacity: 0;}
+  100% { opacity: 1;}
+  
 }
