--- a/src/components/Categories/Categories.css
+++ b/src/components/Categories/Categories.css
@@ -15,8 +15,8 @@
     max-width: 60%;
     color:#262662;
     font-weight: 400px;
-    font-size: 25q
-    px;
+font-size: 40px;
+
     
     
 
@@ -28,10 +28,11 @@
     justify-content: space-between;
     align-items: center;
     text-align: center;
-    margin: 20px 0;
+    
     
     gap:30px;
     overflow-x:scroll;
+    
    
 }
 .explore-categories-list::-webkit-scrollbar{
