--- a/src/components/Navbar/Header/Header.css
+++ b/src/components/Navbar/Header/Header.css
@@ -59,6 +59,32 @@
     #one-time:hover{
         background-color: rgb(126, 129, 138);
     }
+    @media (max-width:1050px) {
+       
+        .header-contents{
+            max-width:45% ;
+        }
+    }
+    @media (max-width:750px) {
+        .header-contents{
+
+            max-width: 65%;
+
+        }
+        .header-contents p{
+            display: none;
+
+        }
+        .header-contents button{
+            padding: 2vw 4 vw;
+
+        }
+
+
+
+
+    }
+
 
 
 
