--- a/src/components/Fotter/Fotter.css
+++ b/src/components/Fotter/Fotter.css
@@ -63,5 +63,17 @@
 
 
 }
+@media(max-width:750px){
+
+
+    .fotter-content{
+        display: flex;
+        flex-direction: column;
+        gap:35px;
+    }
+    .footer-copyright{
+        text-align: center;
+    }
+}
 
 
