--- a/src/components/Fotter/Fotter.css
+++ b/src/components/Fotter/Fotter.css
@@ -1,3 +1,5 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Jersey+20+Charted&display=swap');
 .fotter{
     
     color:#d9d9d9 ;
@@ -22,6 +24,14 @@
     gap:20px;
     text-transform: capitalize;
 }
+.footer-content-left p{
+    
+    font-family: "Jersey 20 Charted", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+      }
+      
+
 
 .footer-content-left img{
     width: 50px;
