--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -5,12 +5,26 @@
     justify-content: space-between;
     align-items: center;
     
-    height: 4rem;
+    height: 5rem;
     width: 90%;
     margin: auto;
     
-    z-index: 6;
+   
+    z-index: 1;
+    
     }
+
+    .navbar a{
+        font-size: 23px;
+        font-weight: 550;
+    }
+.navbar a:hover{
+    color: black;
+    transform: scale(1.1);
+    
+
+
+}
 
 .logo{
     height: 40px;
@@ -45,6 +59,7 @@
     display: flex;
     align-items: center;
     gap:15px;
+    
 }
 .navbar button{
     background: transparent;
@@ -55,6 +70,7 @@ padding: 8px 26px;
 border-radius: 9px;
 cursor: pointer;
 transition: 1s;
+
             
 
 }
@@ -72,6 +88,7 @@ transition: 1s;
 }
 .navbar-right img{
     cursor: pointer;
+    
 }
 @media (max-width:150px) {
     .navbar .logo{
