--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -90,7 +90,7 @@ transition: 1s;
     cursor: pointer;
     
 }
-@media (max-width:150px) {
+@media (max-width:350px) {
     .navbar .logo{
         width: 140px;
     }
@@ -110,8 +110,12 @@ transition: 1s;
     }
 }
 @media (max-width:900px) {
+    .navbar{
+        padding-bottom: 20px;
+        
+    }
     .navbar .logo{
-        width: 120px;
+        width: 40px;
     }
     .navbar-menu{
         gap:15px;
@@ -124,9 +128,12 @@ transition: 1s;
         width: 20px;
     }
     .navbar-right buttton{
-        padding: 8px 20px;
-        font-size: 15pc;
+        padding: 8px 2px;
+        font-size: 15px;
 
+    }
+    .navbar-left h2{
+        font-size: 10px;
     }
 }
 
